update: Done some work on migration of invoice edit;

--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -1,23 +1,40 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>List</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>List</ion-title>
+    </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
-      <ion-icon [name]="item.icon" item-start></ion-icon>
-      {{item.title}}
-      <div class="item-note" item-end>
-        {{item.note}}
-      </div>
-    </button>
-  </ion-list>
-  <div *ngIf="selectedItem" padding>
-    You navigated here from <b>{{selectedItem.title}}</b>
-  </div>
+    <ion-fab bottom right>
+        <button ion-fab color="danger" (click)="newInvoice()">
+            <ion-icon name="add"></ion-icon>
+        </button>
+    </ion-fab>
+    <ion-list>
+        <button ion-item>
+            <h2>OMV -
+                <small>бензин</small>
+            </h2>
+            <h3>100лв
+                <small>(20лв ДДС)</small>
+            </h3>
+            <p>26.08.2018</p>
+        </button>
+    </ion-list>
+    <ion-list>
+        <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
+            <ion-icon [name]="item.icon" item-start></ion-icon>
+            {{item.title}}
+            <div class="item-note" item-end>
+                {{item.note}}
+            </div>
+        </button>
+    </ion-list>
+    <div *ngIf="selectedItem" padding>
+        You navigated here from
+        <b>{{selectedItem.title}}</b>
+    </div>
 </ion-content>
