--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,26 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>Home</ion-title>
+    </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+    <ion-fab bottom right>
+        <button ion-fab color="danger" (click)="newInvoice()">
+            <ion-icon name="add"></ion-icon>
+        </button>
+    </ion-fab>
+    <ion-grid>
+        <ion-row>
+            <ion-col col-6>
+                <button ion-button outline item-center icon-start ion-button>
+                    <ion-icon name="list"></ion-icon>
+                    Invoices
+                </button>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
